logs/validate.20260408-034525.log
Mode: isolate
Isolate: including Chap38 Chap37 Chap41 Chap18 Chap19 Chap23 Chap02
error: unexpected token, expected `;`
   --> src/Chap41/ArraySetEnumMtEph.rs:513:62
    |
513 |                         #[trigger] seq@[k] == result_vec@[k] by
    |                                                              ^^

error[E0425]: cannot find type `ArraySetEnumMtEph` in this scope
    --> src/Chap41/ArraySetEnumMtEph.rs:1015:25
     |
1015 |     impl fmt::Debug for ArraySetEnumMtEph {
     |                         ^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `ArraySetEnumMtEph` in this scope
    --> src/Chap41/ArraySetEnumMtEph.rs:1022:27
     |
1022 |     impl fmt::Display for ArraySetEnumMtEph {
     |                           ^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 8s
Sampled Memory Usage: peak rust_verify RSS: 3432MB, peak z3 RSS: 690MB, min free: 22824MB
Sampled CPU Usage: rust_verify: 60s, z3 children: 54s
